--- a/vignettes/stdlib-equality.Rmd
+++ b/vignettes/stdlib-equality.Rmd
@@ -27,7 +27,9 @@ provide the pointer-level semantics they require.
 
 ### equal? {#equal}
 
-Deep structural equality. Dispatches on class of first argument. Optional :strict #t uses identical? for atomics. Add methods with (set-method! 'equal? 'my-class (lambda (a b strict) ...)).
+Deep structural equality. Dispatches on class of
+first argument. Optional :strict #t uses identical? for atomics.
+Add methods with (set-method! 'equal? 'my-class (lambda (a b strict) ...)).
 
 **Signature:** `(equal? a b [strict #f])`
 
@@ -174,7 +176,8 @@ Check if all objects have the same S3 type.
 
 ### set-method! {#set-method-bang}
 
-Register an S3-style method. Example: (set-method! 'equal? 'my-class (lambda (a b strict) ...)).
+Register an S3-style method.
+Example: (set-method! 'equal? 'my-class (lambda (a b strict) ...)).
 
 **Signature:** `(set-method! generic-name class-name method-fun)`
 
@@ -216,7 +219,8 @@ argument. Users can register additional methods with `set-method!`.
 
 ### equal?.default {#equal-default}
 
-Default equality: atomic/vector comparison. :strict #t => #f; else use == with type coercion.
+Default equality: atomic/vector comparison.
+:strict #t => #f; else use == with type coercion.
 
 **Signature:** `(equal?.default a b [strict #f])`
 
@@ -247,7 +251,8 @@ Compare lists recursively by structure and elements.
 
 ### equal?.environment {#equal-environment}
 
-Compare environments by bindings and values (dict, set, R6, refclass are env-based).
+Compare environments by bindings and values
+(dict, set, R6, refclass are env-based).
 
 **Signature:** `(equal?.environment a b [strict #f])`
 
