remove package name prefixes from various objects

--- a/README.Rmd
+++ b/README.Rmd
@@ -61,7 +61,7 @@ devtools::load_all()
 library(rye)
 
 # Start the REPL
-engine <- RyeEngine$new()
+engine <- Engine$new()
 engine$repl()
 ```
 
@@ -72,7 +72,7 @@ The engine loads the base stdlib automatically.
 Install the CLI wrapper once after installing the package:
 
 ```{r eval=FALSE}
-rye::rye_install_cli()
+rye::install_cli()
 ```
 
 ```bash
