--- a/TODO
+++ b/TODO
@@ -1,9 +1,13 @@
-o) run other cran submission steps
+o) update README
+o) update citation
+o) maybe rename package?
 
-o) enable actions, get CI working
-o) make CI configuration for coverage and everything else sane, figure out how to run some more during Feb, maybe shrink matrix?
+o) enable actions
+o) rationalize CI configuration for coverage and everything else
+
 o) consider using the github-action-benchmark GH action to run benchmarks / commit them to a separate branch / visualize them
 
 o) minor pkgdown warning about site url
-o) actually push site somewhere
-o) claude-sandbox-images: docker push and other automation
+o) figure out where / how to host the docs
+
+o) run other cran submission steps
