clean up CRAN targets

--- a/TODO
+++ b/TODO
@@ -1,3 +1,9 @@
+o) is a load-order.rds entirely safe? binaries and such -- should it be text?
+
+o) coverage targets have a lot of embedded R code -- factor out?
+
+o) remove any other rye_ references we can
+
 o) update README
 o) update citation
 o) maybe rename package?
